syntax = "proto3";

option csharp_namespace = "namespace_Bruteforce";

package bruteforce;

// The greeting service definition.
service BruteForce {
  // Sends a greeting
  rpc TSPRoute (RouteRequest) returns (RouteReponse);
}

// The request message containing the user's name.
message RouteRequest {
    string matrixdistance = 1; // 2D array represented as a string
    string ids = 2;
    int32 srcid=3;
    int32 desid=4;
}

message SortIDs{
    repeated int32 id = 1;
}
// The response message containing the greetings.
message RouteReponse {
    SortIDs sortids=1;
    float totaldistance=2;
}
